<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context="com.gapxventuraplaza.MenuActivity$ProfileFragment"
    android:background="@android:color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="19dp"
        android:layout_marginRight="@dimen/list_horizontal_margin"
        android:layout_marginLeft="@dimen/list_horizontal_margin"
        android:orientation="vertical" >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/dashed_area_text"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:paddingTop="20dp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textSize="@dimen/textsize_xlarge"
            android:background="@drawable/drawable_dashed" />

        <Button
            android:id="@+id/buttonDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_gravity="center"
            android:text="@string/show"
            android:textSize="@dimen/textsize_large"
            style="@style/UIButtonInverse" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/qrexample" />


    </LinearLayout>

</ScrollView>
