<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.vehiculosvip.MenuActivity$CalendarFragment"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:padding="12dp"
            android:layout_marginRight="@dimen/list_horizontal_margin"
            android:layout_marginLeft="@dimen/list_horizontal_margin"
            android:orientation="vertical" >

        <TextView
            android:id="@+id/titleConfiguracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:paddingTop="10dp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize_large" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/theme_color"/>

    <LinearLayout android:id="@+id/form_Configuracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/textsize_medium">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:fontFamily="sans-serif-light"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_gravity="left"
                android:gravity="center_vertical"
                android:text="@string/action_actualizar_eventos"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_medium"
                android:layout_weight="1"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/btnActualizarEventos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-light"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_gravity="right"
                android:gravity="center"
                android:text="@string/action_actualizar"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_small"
                android:textStyle="bold"
                android:layout_weight="1"
                style="@style/UIButtonSupervision"/>

        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/theme_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/textsize_medium">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:fontFamily="sans-serif-light"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_gravity="left"
                android:gravity="center_vertical"
                android:text="@string/action_cerrar_sesion_de_usuario"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_medium"
                android:layout_weight="1"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/btnCerrarSesion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-light"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_gravity="right"
                android:gravity="center"
                android:text="@string/action_cerrar_sesion"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_small"
                android:textStyle="bold"
                style="@style/UIButtonSupervision"
                android:layout_weight="1"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/theme_color"/>


    </LinearLayout>

    </LinearLayout>

</FrameLayout>



