<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:id="@+id/bg_layout"
	android:fitsSystemWindows="false"
	android:background="@drawable/menu_background"
	tools:context="com.special.CreateSupervisionActivity">

	<com.special.utils.UIParallaxScroll
		android:id="@+id/scroller"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true"
		app:headerView="@+id/layout_top">

		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<TextView
				android:id="@+id/title"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:fontFamily="sans-serif-light"
				android:gravity="center"
				android:paddingLeft="16dp"
				android:paddingTop="2dp"
				android:paddingBottom="10dp"
				android:paddingRight="16dp"
				android:text="@string/detail_placeholder_crear_supervision"
				android:textSize="@dimen/textsize_large"
				android:layout_below="@+id/image_view"
				android:textColor="@android:color/white"/>

			<LinearLayout
				android:id="@+id/informations_container"
				android:layout_width="match_parent"
				android:layout_height="fill_parent"
				android:orientation="vertical"
				android:background="@android:color/white"
				android:layout_below="@+id/title"
				android:layout_marginLeft="@dimen/list_horizontal_margin"
				android:layout_marginRight="@dimen/list_horizontal_margin"
				android:layout_marginBottom="@dimen/list_horizontal_margin"
				android:gravity="top">

				<com.special.utils.UITabs
					android:id="@+id/toggle"
					android:layout_gravity="center"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="10dp"
					android:orientation="horizontal">

					<RadioButton
						android:id="@+id/toggle1"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:checked="true"
						android:text="@string/description_tab_1"
						style="@style/UITabsSupervision"/>

				</com.special.utils.UITabs>

				<LinearLayout
					android:id="@+id/listView"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical" >
				</LinearLayout>

				<Button
					android:id="@+id/buttonGuardarEvaluacion"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="3dp"
					android:layout_gravity="center"
					android:text="@string/guardar_supervisión"
					android:textSize="@dimen/textsize_medium"
					style="@style/UIButtonSupervision" />

			</LinearLayout>

			<com.special.utils.UICircularImage
				xmlns:app="http://schemas.android.com/apk/res-auto"
				android:id="@+id/image_view"
				android:layout_width="1dp"
				android:layout_height="1dp"
				android:layout_alignParentTop="true"
				android:layout_centerHorizontal="true"
				android:layout_marginTop="20dp"
				android:layout_marginBottom="20dp"
				app:line_color="@android:color/white"
				app:line_color_press="@color/button_theme_color"
				app:line_width="1dp"
				app:padding="0dp" />

		</RelativeLayout>

	</com.special.utils.UIParallaxScroll>


	<RelativeLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/layout_navigation">

		<FrameLayout
			android:id="@+id/layout_top"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:fitsSystemWindows = "true"
			android:background="@color/bar_color">

			<Button
				android:layout_width="28dp"
				android:layout_height="28dp"
				android:background="@drawable/titlebar_back_selector"
				android:id="@+id/title_bar_left_menu"
				android:layout_gravity="left|center_vertical"
				android:layout_marginLeft="10dp"/>

			<TextView
				android:id="@+id/titleBar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="7dp"
				android:fontFamily="sans-serif-light"
				android:ellipsize="marquee"
				android:singleLine="false"
				android:text="xasdfghj"
				android:textSize="@dimen/textsize_large"
				android:textColor="@android:color/white"
				android:layout_gravity="center"/>

		</FrameLayout>
	</RelativeLayout>



</RelativeLayout>